@@ -1,3 +1,9 @@
+2012-09-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	[BZ #14370]
+	* elf/dl-lookup.c (_dl_lookup_symbol_x): Check mismatched
+	TLS/non-TLS symbols.
+
 2012-09-04  Florian Weimer  <fweimer@redhat.com>
 
 	* stdlib/tst-secure-getenv.c (alternative_main): Only warn on SGID
